@@ -1,11 +1,12 @@
 2004-01-09  Saito <saito2@digitalme.com>
 
 	* timidity/timidity.c, timidity/playmidi.c,
-	  timidity/mix.c, timidity/instrum.h:
+	  timidity/mix.c, timidity/instrum.[ch]:
 	  Fix typo.
 	  Fix modulation envelope.
 	  Fix GS SysEx. Drum Instrument Play Note.
 	  Add #extension playnote.
+	  Add some patch options.
 
 2004-01-08  Saito <saito2@digitalme.com>
 
